--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,10 @@
+@import "./fonts/fonts.css";
+
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: "Nimbus Sans L", sans-serif;
 }
 
 a {
