--- a/styles/globals.css
+++ b/styles/globals.css
@@ -106,6 +106,12 @@ body {
   color: #333;
 }
 
+body {
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+}
+
 a {
   color: inherit;
   text-decoration: none;
